--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   web:
     build: .
-    command: bash -c "python main.py"
+    command: python3 main.py
     volumes:
       - .:/app
     ports:
