--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,24 @@
 version: "3"
 
 services:
+  rabbitmq_service:
+    image: "rabbitmq:3-management"
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+
   web:
-    build: .
+    build:
+      dockerfile: ./Dockerfile
+      context: .
+
+    working_dir: /app
     command: python3 main.py
     volumes:
       - .:/app
     ports:
-      - "2023:2023"
+      - "2024:2023"
+    depends_on:
+      - rabbitmq_service
+
+    privileged: true
