--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,35 @@ version: "3"
 services:
   rabbitmq_service:
     image: "rabbitmq:3-management"
+    container_name: rabbitmq_service
+
+    hostname: "rmq-host"
+
+    environment:
+      RABBITMQ_DEFAULT_USER: "admin"
+      RABBITMQ_DEFAULT_PASS: "pass"
+
+    healthcheck:
+      test: [ "CMD", "rabbitmqctl", "status"]
+      interval: 5s
+      timeout: 15s
+      retries: 5
+
     ports:
       - "5672:5672"
       - "15672:15672"
+    
+    privileged: true
+
+    networks:
+      - appnet
 
   web:
     build:
       dockerfile: ./Dockerfile
       context: .
+
+    restart: on-failure
 
     working_dir: /app
     command: python3 main.py
@@ -18,7 +39,16 @@ services:
       - .:/app
     ports:
       - "2024:2023"
+
     depends_on:
-      - rabbitmq_service
+      rabbitmq_service:
+        condition: service_healthy
+
+    networks:
+      - appnet
 
     privileged: true
+
+networks:
+  appnet:
+    driver: bridge
