fix: docker compose run services facade

--- a/energy_unit_service/Dockerfile
+++ b/energy_unit_service/Dockerfile
@@ -1,5 +1,5 @@
-FROM python:slim-bookworm
+FROM python:3.9.18-bookworm
 
-COPY requirements.txt requirements.txt
+COPY requirements.txt .
 
-RUN pip3 install --progress-bar off -r requirements.txt
+RUN pip3 install -r requirements.txt --progress-bar off
