--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,34 +20,35 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
-    
+
     privileged: true
 
     networks:
       - appnet
 
-  web:
+  energy-unit-service:
     build:
-      dockerfile: ./Dockerfile
-      context: .
+      context: ./energy_unit_service
+      dockerfile: Dockerfile
 
     restart: on-failure
 
-    working_dir: /app
-    command: python3 main.py
     volumes:
-      - .:/app
+      - ./energy_unit_service:/app
+
+    working_dir: /app
+    command: make run
     ports:
-      - "2024:2023"
+      - "4040:4040"
 
     depends_on:
       rabbitmq_service:
         condition: service_healthy
 
+    privileged: true
+
     networks:
       - appnet
-
-    privileged: true
 
 networks:
   appnet:
