--- a/energy_unit_service/configs/dev/config.yaml
+++ b/energy_unit_service/configs/dev/config.yaml
@@ -1,9 +1,9 @@
-scenariste:
+scenarist:
   event_queue_addr: rmq-host
   event_queue_port: 5672
   event_queue_username: admin
   event_queue_password: pass
-  event_queue_name: scenariste_action_queue
+  event_queue_name: scenarist_action_queue
 
 grpc_addr: 0.0.0.0
 grpc_port: 4040
