--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "start": "redocly preview-docs",
-    "build": "redocly bundle openapi/openapi.yaml -o dist.json",
+    "build": "redocly bundle openapi/openapi.yaml -o docs/dist.json",
     "join": "redocly join openapi/paths/*.yaml --prefix-tags-with-filename true --output=openapi/openapi.yaml",
     "test": "redocly lint"
   }
