--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,10 @@ services:
 
     privileged: true
 
+    mem_limit: 300m
+    mem_reservation: 100m
+    cpus: 0.3
+
     networks:
       - appnet
 
@@ -34,11 +38,10 @@ services:
     restart: on-failure
 
     volumes:
-      - ./protos:/protos
       - ./energy_unit_service:/app
 
     working_dir: /app
-    command: make gen run
+    command: make run
     ports:
       - "4040:4040"
 
