--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,34 @@ services:
 
     privileged: true
 
+    mem_limit: 300m
+    mem_reservation: 100m
+    cpus: 0.3
+
+    networks:
+      - appnet
+
+  atmosphere-unit-service:
+    build:
+      context: ./atmosphere_unit_service
+      dockerfile: Dockerfile
+
+    restart: on-failure
+
+    volumes:
+      - ./atmosphere_unit_service:/app
+
+    working_dir: /app
+    command: make run
+    ports:
+      - "2023:2023"
+
+    depends_on:
+      rabbitmq_service:
+        condition: service_healthy
+
+    privileged: true
+
     networks:
       - appnet
 
@@ -34,11 +62,10 @@ services:
     restart: on-failure
 
     volumes:
-      - ./protos:/protos
       - ./energy_unit_service:/app
 
     working_dir: /app
-    command: make gen run
+    command: make run
     ports:
       - "4040:4040"
 
